--- a/distribution/appsettings.json
+++ b/distribution/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=pixeltech.mssql.somee.com;packet size=4096;user id=pixeltech_SQLLogin_1;pwd=stg3gwrdx6;data source=pixeltech.mssql.somee.com;persist security info=False;initial catalog=pixeltech"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PukExam-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "TokenKey": "super secret key",
   "Logging": {
